--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
             <artifactId>jnotify</artifactId>
             <version>0.94</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
